application/aria2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aria2
spec:
  selector:
    app: aria2
  ports:
    - protocol: TCP
      port: 6868
      targetPort: 6868
      name: p2p
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: aria-ng
  type: ClusterIP
